--- a/zoo/stm32f0v1/scripts/openocd-jlink-swd.cfg
+++ b/zoo/stm32f0v1/scripts/openocd-jlink-swd.cfg
@@ -10,7 +10,7 @@ proc program () {
 	init
 	reset init
 	halt
-	flash write_image erase out/test.bin 0x08000000
+	flash write_image erase out/stm32f0v1.out/test.bin 0x08000000
 	reset run
 	shutdown
 }
