--- a/.travis.yml
+++ b/.travis.yml
@@ -9,7 +9,7 @@ before_install:
 - sudo apt-get update -qq
 - sudo apt-get install -y gcc-arm-none-eabi
 - sudo apt-get install -y gcc-avr binutils-avr avr-libc
-- sudo apt-get install -y protobuf-compiler protobuf-c-compiler libprotobuf-dev
+- sudo apt-get install -y protobuf-compiler protobuf-c-compiler libprotobuf-dev python-protobuf
 
 script:
 # stm32f0v1 board
