--- a/.travis.yml
+++ b/.travis.yml
@@ -6,11 +6,13 @@ before_install:
 - git submodule update --init --recursive
 
 # setup toolchains
-- sudo apt-add-repository 'deb http://archive.ubuntu.com/ubuntu trusty main universe multiverse restricted'
 - sudo apt-get update -qq
 - sudo apt-get install -y gcc-arm-none-eabi
 - sudo apt-get install -y gcc-avr binutils-avr avr-libc
-- sudo apt-get install -y protobuf-compiler protobuf-c-compiler libprotobuf-dev python-protobuf
+- sudo apt-get install -y protobuf-compiler protobuf-c-compiler libprotobuf-dev
+
+# setup python-protobuf package
+- pip install protobuf
 
 script:
 # stm32f0v1 board
